--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
-MNEMONIC=""
+MNEMONIC="dirt fog grunt select ripple tiger box exercise ugly bird aware economy"
 TOKENID=""
 TOKENQTY="100"
 DISTRIBUTE_SECRET="memu"
